--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/graphql": "^7.10.3",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "apollo-server-express": "^2.22.2",
     "class-validator": "^0.13.1",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.4",
+    "mongoose": "^5.12.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
